@@ -40,11 +40,6 @@ A list of all bugs open for the next v3.0.1 release can be found at
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
-  * core: Various memory leaks and uninitialized values.
-    Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1133639
-    Jira: https://issues.apache.org/jira/browse/TS-828
-    +1: zwoop, zym, igalic
-
   * build: remove uninstall target from build system
     Trunk patch: http://svn.apache.org/viewvc?rev=1136958&view=rev
     Jira: https://issues.apache.org/jira/browse/TS-842
